dev: ticket指令